[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.black]
line-length = 120

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
omit = [
  "alembic/*",
  "run.py",
  "config.py",
  "conftest.py",
  "constants.py"
]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
exclude = [
  "test",
  "alembic"
]
local_partial_types = true
namespace_packages = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
python_version = "3.11"
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
disallow_untyped_calls = false
ignore_missing_imports = true
module = "sqlalchemy.*"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "furl"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "factory.*"

[tool.poetry]
authors = ["jplhanna <jpl.hanna@gmail.com>"]
description = "Discord bot for tracking and rewarding tasks"
name = "discord-quest-bot"
packages = [{include = "local_server"}]
readme = "README.md"
version = "0.1.1"

[tool.poetry.dependencies]
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.25"}
alembic = "^1.8"
asyncpg = "0.29.0"
dependency-injector2 = "^4.41.1"
"discord.py" = "^2.0.1"
furl = "^2.1.3"
psycopg2-binary = "^2.9.6"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python = "^3.11"
sqlmodel = "^0.0.14"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = {extras = ["toml"], version = "^6.4.4"}
factory-boy = "^3.3.0"
faker = "*"
flake8-pytest-style = "^1.6.0"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-async-sqlalchemy = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-factoryboy = "^2.7.0"
pytest-mock = "^3.12.0"
pytest-randomly = "*"
ruff = "^0.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning"
]
markers = [
  "integration"
]

[tool.ruff]
exclude = ["alembic"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
select = [
  "E",
  "F",
  "W",
  "C",
  "PT",
  "I",
  "S",
  "RSE",
  "RET501",
  "RET502",
  "RET503",
  "RET504",
  "FBT",
  "ASYNC",
  "UP",
  "SIM",
  "TID",
  "TCH",
  "ARG",
  "RUF100"
]

[tool.ruff.lint.isort]
force-single-line = true
force-to-top = ["services"]
forced-separate = ["src.tests", "src.helpers"]
lines-between-types = 1

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"src/helpers/factories/*" = ["FBT001"]
"src/model_hub.py" = ["F401"]
"src/tests/*" = ["S"]
